# SibSUTIS_Semesters_5_6

1С/Database/: 1Cv8.1CD
1С/Kursach/: 1Cv8.1CD
CS Architecture/: IP-217_Igosh_MA.docx
Functional & Logical Programming/: lab_1.lsp  lab_2.lisp  lab_3.lisp
NetProg/kursach/: setevoe programirovanie.rar
NetProg/kursach/setevoe programirovanie/game3/: CMakeLists.txt
NetProg/kursach/setevoe programirovanie/game3/client/: game.cpp  game.h  input.cpp  input.h  main.cpp  network.cpp  network.h  render.cpp  render.h
NetProg/kursach/setevoe programirovanie/game3/common/: game_state.h  network.cpp  network.h  utils.h
NetProg/kursach/setevoe programirovanie/game3/server/: game.cpp  game.h  game_instance.cpp  game_instance.h  game_manager.cpp  game_manager.h  main.cpp  matchmaker.cpp  matchmaker.h  network.cpp  network.h
NetProg/lab1/: client_side  lab1.cpp  lab1_client.cpp  server_side
NetProg/lab2/: client_side  lab2.cpp  server_side
NetProg/lab3/: file.txt  lab3.cpp  server_side
NetProg/lab4/: lab2_client.cpp  lab4.cpp  server_side
QT/CourseWork/: CourseWork.pro  addlistingdialog.cpp  addlistingdialog.h  addreviewdialog.cpp  addreviewdialog.h  adminpage.cpp  adminpage.h  appcontext.cpp  appcontext.h  categorymanager.cpp  categorymanager.h  clickablelabel.cpp  clickablelabel.h  complaintspage.cpp  complaintspage.h  databasehandler.cpp  databasehandler.h  dialogpage.cpp  dialogpage.h  dialogspage.cpp  dialogspage.h  editlistingdialog.cpp  editlistingdialog.h  (+30 more)
TSVPiS/: 1.py  14.py  5_6_7_8.py  FourierSolver.py  ImNum.py  quick_multi.py  stolbik  svertka.py
(+99 files in other folders)
